update(image-assets): add image assets

--- a/avid-animation.html
+++ b/avid-animation.html
@@ -52,7 +52,7 @@
       <div class="loader">
         <div class="loader__content">
           <div class="loader__logo">
-            <img src="img/avid.svg" alt="Avid Animation">
+            <img src="http://avidanimation.com/img/avid.svg" alt="Avid Animation">
           </div>
         </div>
       </div>
@@ -104,7 +104,7 @@
 
             <!-- Logo Start -->
             <div class="logo">
-              <img src="img/avid.svg" alt="Avid Animation">
+              <img src="http://avidanimation.com/img/avid.svg" alt="Avid Animation">
             </div>
             <!-- Logo End -->
 
@@ -141,7 +141,11 @@
         <!-- Fullscreen Background Start-->
         <div class="fullscreen-bg">
           <!-- kenburns background -->
-          <div id="bgndKenburnsFull"></div>
+          <!-- <div id="bgndKenburnsFull"></div> -->
+          <video autoplay muted loop playsinline class="fullscreen-bg__video">
+            <source src="http://avidanimation.com/img/landingpage.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+          </video>
           <!-- Dark gradient cover layer -->
           <div class="color-layer layer-dark-03"></div>
         </div>
@@ -377,22 +381,22 @@
                     <div class="row gx-5">
                       <!-- Feature single item -->
                       <div class="col-12 col-sm-6 d-flex justify-content-start align-items-center features__item">
-                        <img src="https://dummyimage.com/50x46/4d4d4d/636363" alt="Ignite Template Feature">
+                        <img src="http://avidanimation.com/img/powwater.jpg" alt="Ignite Template Feature">
                         <h3>Cocacola</h3>
                       </div>
                       <!-- Feature single item -->
                       <div class="col-12 col-sm-6 d-flex justify-content-start align-items-center features__item">
-                        <img src="https://dummyimage.com/50x46/4d4d4d/636363" alt="Ignite Template Feature">
+                        <img src="http://avidanimation.com/img/powwater.jpg" alt="Ignite Template Feature">
                         <h3>Boomplay</h3>
                       </div>
                       <!-- Feature single item -->
                       <div class="col-12 col-sm-6 d-flex justify-content-start align-items-center features__item">
-                        <img src="https://dummyimage.com/50x46/4d4d4d/636363" alt="Ignite Template Feature">
+                        <img src="http://avidanimation.com/img/powwater.jpg" alt="Ignite Template Feature">
                         <h3>Unilever</h3>
                       </div>
                       <!-- Feature single item -->
                       <div class="col-12 col-sm-6 d-flex justify-content-start align-items-center features__item">
-                        <img src="https://dummyimage.com/50x46/4d4d4d/636363" alt="Ignite Template Feature">
+                        <img src="http://avidanimation.com/img/powwater.jpg" alt="Ignite Template Feature">
                         <h3>Royco</h3>
                       </div>
                     </div>
@@ -413,11 +417,11 @@
 
                     <!-- Works Gallery Single Item Start -->
                     <figure class="col-12 col-sm-6 my-gallery__item" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-                      <a href="https://dummyimage.com/1000x1200/1f1f1f/3b3b3b" data-image="https://dummyimage.com/1000x1200/1f1f1f/3b3b3b" class="my-gallery__link" itemprop="contentUrl" data-size="1000x1200">
-                        <img src="https://dummyimage.com/1000x1200/1f1f1f/3b3b3b" class="my-gallery__image" itemprop="thumbnail" alt="Image description">
+                      <a href="http://avidanimation.com/img/worldbank1.jpg" data-image="http://avidanimation.com/img/worldbank1.jpg" class="my-gallery__link" itemprop="contentUrl" data-size="1000x1200">
+                        <img src="http://avidanimation.com/img/worldbank1.jpg" class="my-gallery__image" itemprop="thumbnail" alt="Image description">
                       </a>
                       <figcaption class="my-gallery__description" itemprop="caption description">
-                        <h4>Cocacola
+                        <h4>World Bank
                           <small>TM</small>
                         </h4>
                         <p>A quick look at our designs by Avid for Cocacola
@@ -428,8 +432,8 @@
 
                     <!-- Works Gallery Single Item Start -->
                     <figure class="col-12 col-sm-6 my-gallery__item" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-                      <a href="https://dummyimage.com/1000x1200/dedede/c9c9c9" data-image="https://dummyimage.com/1000x1200/dedede/c9c9c9" class="my-gallery__link" itemprop="contentUrl" data-size="1000x1200">
-                        <img src="https://dummyimage.com/1000x1200/dedede/c9c9c9" class="my-gallery__image" itemprop="thumbnail" alt="Image description">
+                      <a href="http://avidanimation.com/img/powwater.jpg" data-image="http://avidanimation.com/img/powwater.jpg" class="my-gallery__link" itemprop="contentUrl" data-size="1000x1200">
+                        <img src="http://avidanimation.com/img/powwater.jpg" class="my-gallery__image" itemprop="thumbnail" alt="Image description">
                       </a>
                       <figcaption class="my-gallery__description opposite" itemprop="caption description">
                         <h4 class="opposite">Boomplay
@@ -443,8 +447,8 @@
 
                     <!-- Works Gallery Single Item Start -->
                     <figure class="col-12 col-sm-6 my-gallery__item" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-                      <a href="https://dummyimage.com/1000x1200/dedede/c9c9c9" data-image="https://dummyimage.com/1000x1200/dedede/c9c9c9" class="my-gallery__link" itemprop="contentUrl" data-size="1000x1200">
-                        <img src="https://dummyimage.com/1000x1200/dedede/c9c9c9" class="my-gallery__image" itemprop="thumbnail" alt="Image description">
+                      <a href="http://avidanimation.com/img/powwater.jpg" data-image="http://avidanimation.com/img/powwater.jpg" class="my-gallery__link" itemprop="contentUrl" data-size="1000x1200">
+                        <img src="http://avidanimation.com/img/powwater.jpg" class="my-gallery__image" itemprop="thumbnail" alt="Image description">
                       </a>
                       <figcaption class="my-gallery__description opposite" itemprop="caption description">
                         <h4 class="opposite">Unilever
@@ -457,9 +461,9 @@
                     <!-- Works Gallery Single Item End -->
 
                     <!-- Works Gallery Single Item Start -->
-                    <figure class="col-12 col-sm-6 my-gallery__item" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-                      <a href="D:\Avid Animation\img\powwater.jpg" data-image="D:\Avid Animation\img\powwater.jpg" class="my-gallery__link" itemprop="contentUrl" data-size="1000x1200">
-                        <img src="D:\Avid Animation\img\powwater.jpg" class="my-gallery__image" itemprop="thumbnail" alt="Image description">
+                    <figure class="col-12 col-sm-6 my-gallery__item" itemprop="associatedMedia" itemscope itemtype="http://avidanimation.com/img/powwater.jpg">
+                      <a href="http://avidanimation.com/img/powwater.jpg" data-image="http://avidanimation.com/img/powwater.jpg" class="my-gallery__link" itemprop="contentUrl" data-size="1000x1200">
+                        <img src="http://avidanimation.com/img/powwater.jpg" class="my-gallery__image" itemprop="thumbnail" alt="Image description">
                       </a>
                       <figcaption class="my-gallery__description " itemprop="caption description">
                         <h4>Royco
@@ -518,7 +522,7 @@
                             <i class="fa-solid fa-location-crosshairs"></i>
                           </div>
                           <div class="contactdata__text">
-                            <p><a class="contact-link" href="https://goo.gl/maps/nWXKpGaDPuyH6gxRA" target="_blank">11 West 53 Street,<br>New York, NY 10019</a></p>
+                            <p><a class="contact-link" href="http://avidanimation.com/img/powwater.jpg" target="_blank">11 West 53 Street,<br>Nairobi, NY 10019</a></p>
                           </div>
                         </div>
                         <div class="contactdata__descr d-flex align-items-start">
@@ -526,7 +530,7 @@
                             <i class="fa-solid fa-location-crosshairs"></i>
                           </div>
                           <div class="contactdata__text">
-                            <p><a class="contact-link" href="https://goo.gl/maps/xap5o3MZBuC6DFHz8" target="_blank">3400 Broadway,<br>Oakland, CA 94611</a></p>
+                            <p><a class="contact-link" href="http://avidanimation.com/img/powwater.jpg" target="_blank">3400 Broadway,<br>Nairobi, CA 94611</a></p>
                           </div>
                         </div>
                       </div>
